# brc-kernel

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  STRESS_REPORT.json  pyproject.toml
artifacts/: README.md
benchmarks/: README.md
benchmarks/results/: benchmark_metadata.json  latest_test.json  multiseed_summary.json
benchmarks/runs/: seed100_steps150.jsonl  seed101_steps150.hash  seed102_steps150.jsonl  seed103_steps150.hash  seed103_steps150.jsonl  seed104_steps150.hash  seed104_steps150.jsonl  seed105_steps150.hash  seed105_steps150.jsonl  seed106_steps150.jsonl  seed107_steps150.hash  seed107_steps150.jsonl  seed108_steps150.hash  seed109_steps150.hash  seed109_steps150.jsonl  seed10_steps150.jsonl  seed112_steps150.hash  seed114_steps150.hash  seed115_steps150.hash  seed117_steps150.hash  seed118_steps150.jsonl  seed119_steps150.jsonl  seed11_steps150.hash  seed11_steps150.jsonl  seed120_steps150.hash  seed120_steps150.jsonl  seed121_steps150.jsonl  seed124_steps150.hash  seed125_steps150.jsonl  seed128_steps150.hash  seed128_steps150.jsonl  seed12_steps150.hash  seed12_steps150.jsonl  seed130_steps150.hash  seed130_steps150.jsonl  seed131_steps150.jsonl  seed132_steps150.jsonl  seed133_steps150.jsonl  seed134_steps150.hash  seed134_steps150.jsonl  (+252 more)
brc/: README.md
brc/interventions/: README.md  freeze.py  (+2 more)
brc_kernel.egg-info/: PKG-INFO  SOURCES.txt
config/: README.md  brc_config.json
docs/: README.md
ledger/: README.md  _rebuild_hash.py  brc_ledger.jsonl  latest.hash  latest.meta.json
state/: README.md
tests/: README.md  public_test.py
(+774 files in other folders)
