[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brc-kernel"
version = "0.1.0"
description = "Bounded Recursive Coherence kernel"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "James Paul Jackson" }]
dependencies = []

[tool.setuptools]
packages = ["brc"]