[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brc-kernel"

      param($m)
      $maj = [int]$m.Groups[1].Value
      $min = [int]$m.Groups[2].Value
      $pat = [int]$m.Groups[3].Value + 1
      "version = `"$maj.$min.$pat`""
    
description = "Bounded Recursive Coherence kernel"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "James Paul Jackson" }]
dependencies = []

[tool.setuptools]
packages = ["brc"]

[project.scripts]
brc-run = "brc.orchestrator.cli:main"

